[package]
name = "uptimer"
version = "0.1.0"
authors = ["Nerixyz"]
edition = "2021"
description = "A multiplatform library to get the uptime of the current process."

[target.'cfg(windows)'.dependencies]
windows = { version = "0.35", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_SystemInformation", "Win32_System_Time"] }
