[package]
name = "uptimer"
version = "0.2.0"
authors = ["Nerixyz"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A multiplatform library to get the uptime of the current process."

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_Time",
] }
